#2 Background light/ Home section started

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section id="home">
+        <div class="titles">
+            <h1>Title One Welcome</h1>
+            <h2>Title Two Welcome</h2>
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
