#3 nav menu started

--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav id="nav">
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#project">PROJECT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="home">
         <div class="titles">
             <h1>Title One Welcome</h1>
             <h2>Title Two Welcome</h2>
+        </div>
+    </section>
+    <section id="about">
+        <div class="titles">
+            <h2>Title About</h2>
+        </div>
+    </section>
+    <section id="project">
+        <div class="titles">
+            <h2>Title Project</h2>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="titles">
+            <h2>Title Contact</h2>
         </div>
     </section>
     <script src="./script.js"></script>
