#4 section about started

--- a/index.html
+++ b/index.html
@@ -19,23 +19,35 @@
         </nav>
     </header>
     <section id="home">
-        <div class="titles">
-            <h1>Title One Welcome</h1>
-            <h2>Title Two Welcome</h2>
+        <div>
+            <h1>The Tech Conference</h1>
+            <h2>Welcome to the future!</h2>
         </div>
     </section>
     <section id="about">
-        <div class="titles">
-            <h2>Title About</h2>
+        <h2>Title About</h2>
+        <div class="about-container">
+            <div class="img-container">
+                <h2>Some subtitle</h2>
+                <img src="./images/undraw_lost_online_re_upmy_light.svg" alt="" id="img1">
+            </div>
+            <div class="img-container">
+                <h2>Some subtitle</h2>
+                <img src="./images/undraw_product_explainer_light.svg" alt="" id="img1">
+            </div>
+            <div class="img-container">
+                <h2>Some subtitle</h2>
+                <img src="./images/undraw_virtual_reality_re_light.svg" alt="" id="img1">
+            </div>
         </div>
     </section>
     <section id="project">
-        <div class="titles">
+        <div>
             <h2>Title Project</h2>
         </div>
     </section>
     <section id="contact">
-        <div class="titles">
+        <div>
             <h2>Title Contact</h2>
         </div>
     </section>
