--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Mode</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/122bfc9a55.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -13,42 +14,51 @@
             <ul>
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li><a href="#project">PROJECT</a></li>
+                <li><a href="#projects">PROJECT</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-    <section id="home">
+    <section id="home" class="section-home">
         <div>
             <h1>The Tech Conference</h1>
             <h2>Welcome to the future!</h2>
         </div>
     </section>
-    <section id="about">
-        <h2>Title About</h2>
+    <section id="about" class="section-about">
+        <h2 class="title-2">Title About</h2>
         <div class="about-container">
             <div class="img-container">
-                <h2>Some subtitle</h2>
+                <h3>Some subtitle</h3>
                 <img src="./images/undraw_lost_online_re_upmy_light.svg" alt="" id="img1">
             </div>
             <div class="img-container">
-                <h2>Some subtitle</h2>
-                <img src="./images/undraw_product_explainer_light.svg" alt="" id="img1">
+                <h3>Some subtitle</h3>
+                <img src="./images/undraw_product_explainer_light.svg" alt="" id="img2">
             </div>
             <div class="img-container">
-                <h2>Some subtitle</h2>
-                <img src="./images/undraw_virtual_reality_re_light.svg" alt="" id="img1">
+                <h3>Some subtitle</h3>
+                <img src="./images/undraw_virtual_reality_re_light.svg" alt="" id="img3">
             </div>
         </div>
     </section>
-    <section id="project">
-        <div>
-            <h2>Title Project</h2>
+    <section id="projects">
+        <h2 class="title-2">Title Project</h2>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ex, vitae nisi reprehenderit in accusantium? Quisquam, dicta adipisci accusantium, enim, eos aliquam voluptate corrupti asperiores aperiam dolore similique? Necessitatibus, facere!</p>
         </div>
     </section>
     <section id="contact">
         <div>
-            <h2>Title Contact</h2>
+            <h2 class="title-2">Title Contact</h2>
         </div>
     </section>
     <script src="./script.js"></script>
