#6 Button switch theme finished

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
     <header>
+        <div class="theme-wrapper">
+            <span class="toggle-icon">
+                <span class="toggle-text">Light Mode</span>
+                <i class="fas fa-sun"></i>
+            </span>
+            <label class="theme-switch">
+                <input type="checkbox">
+                <div class="slider round"></div>
+            </label>
+        </div>
         <nav id="nav">
             <ul>
                 <li><a href="#home">HOME</a></li>
@@ -21,29 +31,29 @@
     </header>
     <section id="home" class="section-home">
         <div>
-            <h1>The Tech Conference</h1>
-            <h2>Welcome to the future!</h2>
+            <h1>The Button Custom</h1>
+            <h2>Chose your button!</h2>
         </div>
     </section>
     <section id="about" class="section-about">
-        <h2 class="title-2">Title About</h2>
+        <h2 class="title-2">Someting</h2>
         <div class="about-container">
             <div class="img-container">
-                <h3>Some subtitle</h3>
-                <img src="./images/undraw_lost_online_re_upmy_light.svg" alt="" id="img1">
+                <h3>Desktop Desing</h3>
+                <img src="./images/undraw_designer_life_re_light.svg" alt="Desktop" id="img1">
             </div>
             <div class="img-container">
-                <h3>Some subtitle</h3>
-                <img src="./images/undraw_product_explainer_light.svg" alt="" id="img2">
+                <h3>Mobile Desing</h3>
+                <img src="./images/undraw_product_explainer_light.svg" alt="Mobile" id="img2">
             </div>
             <div class="img-container">
-                <h3>Some subtitle</h3>
+                <h3>V.R. Desing</h3>
                 <img src="./images/undraw_virtual_reality_re_light.svg" alt="" id="img3">
             </div>
         </div>
     </section>
     <section id="projects">
-        <h2 class="title-2">Title Project</h2>
+        <h2 class="title-2">Buttons</h2>
         <div class="buttons">
             <button class="primary">Primary</button>
             <button class="secondary">Secondary</button>
@@ -57,8 +67,14 @@
         </div>
     </section>
     <section id="contact">
-        <div>
-            <h2 class="title-2">Title Contact</h2>
+        <h2 class="title-2">Contact</h2>
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-codepen"></i>
+            <i class="fab fa-gitlab"></i>
+            <i class="fab fa-npm"></i>
+            <i class="fab fa-yarn"></i>
+            <i class="fab fa-github"></i>
         </div>
     </section>
     <script src="./script.js"></script>
