#7 Switch mode js finished

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="theme-wrapper">
-            <span class="toggle-icon">
-                <span class="toggle-text">Light Mode</span>
+            <span id="toggle-icon">
+                <span class="toggle-text"></span>
                 <i class="fas fa-sun"></i>
             </span>
             <label class="theme-switch">
@@ -48,7 +48,7 @@
             </div>
             <div class="img-container">
                 <h3>V.R. Desing</h3>
-                <img src="./images/undraw_virtual_reality_re_light.svg" alt="" id="img3">
+                <img src="./images/undraw_virtual_reality_re_light.svg" alt="Virtual reality" id="img3">
             </div>
         </div>
     </section>
