#8 local storage added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="theme-wrapper">
             <span id="toggle-icon">
-                <span class="toggle-text"></span>
+                <span class="toggle-text">Light Mode</span>
                 <i class="fas fa-sun"></i>
             </span>
             <label class="theme-switch">
