--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#projects">PROJECT</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#contact">FIND US</a></li>
             </ul>
         </nav>
     </header>
     <section id="home" class="section-home">
         <div>
-            <h1>The Button Custom</h1>
-            <h2>Chose your button!</h2>
+            <h1>The Custom Button</h1>
+            <h2>Choose your button!</h2>
         </div>
     </section>
     <section id="about" class="section-about">
-        <h2 class="title-2">Someting</h2>
+        <h2 class="title-2">Designs</h2>
         <div class="about-container">
             <div class="img-container">
-                <h3>Desktop Desing</h3>
+                <h3>Desktop</h3>
                 <img src="./images/undraw_designer_life_re_light.svg" alt="Desktop" id="img1">
             </div>
             <div class="img-container">
-                <h3>Mobile Desing</h3>
+                <h3>Mobile</h3>
                 <img src="./images/undraw_product_explainer_light.svg" alt="Mobile" id="img2">
             </div>
             <div class="img-container">
-                <h3>V.R. Desing</h3>
+                <h3>V.R.</h3>
                 <img src="./images/undraw_virtual_reality_re_light.svg" alt="Virtual reality" id="img3">
             </div>
         </div>
@@ -63,18 +63,18 @@
             <button class="outline" disabled>Disabled</button>
         </div>
         <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ex, vitae nisi reprehenderit in accusantium? Quisquam, dicta adipisci accusantium, enim, eos aliquam voluptate corrupti asperiores aperiam dolore similique? Necessitatibus, facere!</p>
+            <p>These are some examples of all the buttons that you can customize for your peojects. You can choose the width, height, colors and any additional effects that you want. We invite you to add more buttons to this open source project in our repository.</p>
         </div>
     </section>
     <section id="contact">
-        <h2 class="title-2">Contact</h2>
+        <h2 class="title-2">Find Us Here</h2>
         <div class="social-icons">
             <i class="fab fa-github"></i>
             <i class="fab fa-codepen"></i>
             <i class="fab fa-gitlab"></i>
             <i class="fab fa-npm"></i>
             <i class="fab fa-yarn"></i>
-            <i class="fab fa-github"></i>
+            <i class="fab fa-bitbucket"></i>
         </div>
     </section>
     <script src="./script.js"></script>
